syntax = "proto3";

package auth;

service AuthService {
  rpc LocalLogin (LocalLoginData) returns (JWTToken){}
  rpc LocalRegister(LocalRegisterData) returns (GrpcStatus){}
  rpc VerifyAccessJWTToken(VerifyAccessJWTTokenData) returns (UserInfo){}
  rpc ReissueAccessJWTToken(ReissueAccessJWTTokenData) returns (AccessToken){}
}

message LocalRegisterData {
  string userEmailId = 1;
  string userPassword = 2;
}

message LocalLoginData {
  string userEmailId = 1;
  string userPassword = 2;
}

message VerifyAccessJWTTokenData {
  string accessToken = 1;
}

message ReissueAccessJWTTokenData {
  string refreshToken = 1;
}

message JWTToken {
  int32 grpcStatus = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message GrpcStatus {
  int32 grpcStatus = 1;
}

message UserInfo {
  string userEmailId = 1;
  string userUUID = 2;
  int32 accessLevel = 3;
  int32 grpcStatus = 4;
}

message AccessToken {
  string accessToken = 1;
  int32 grpcStatus = 2;
}
